--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@
 }
 
 .contentContainer a{
-  color: white;
+  color: yellow;
   margin: 5px;
   font-size: 20px;
   font-family: 'Josefin Sans', sans-serif;
@@ -152,5 +152,26 @@
 }
 
 .contentContainer a:hover{
-  color: #344047;
+  color: white;
+}
+
+.titleCContainer{
+  margin-top: 60px;
+  margin-bottom: 5px;
+  display: inline-block;
+  padding: 10px;
+  background-color: #368242;
+  border-radius: 25px;
+}
+
+.titleCContainer a{
+  color: yellow;
+  margin: 5px;
+  font-size: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+  text-decoration: none;
+}
+
+.titleCContainer a:hover{
+  color: white;
 }
