--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@
   color: white;
 }
 
-.titleCContainer{
+.articleTitle{
   margin-top: 60px;
   margin-bottom: 5px;
   display: inline-block;
@@ -164,7 +164,7 @@
   border-radius: 25px;
 }
 
-.titleCContainer a{
+.articleTitle a{
   color: yellow;
   margin: 5px;
   font-size: 20px;
@@ -172,6 +172,6 @@
   text-decoration: none;
 }
 
-.titleCContainer a:hover{
+.articleTitle a:hover{
   color: white;
 }
